---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2024-10-16
  Features:
    - New recipes enriching crushed ores
  Bugfixes:
    - Changed order and subgroups of some items
    - Reduced size of mod by removing some hr graphics
    - Fixed module icons on alt view for krastorio crusher and lumber mill
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2024-10-16
  Bugfixes:
    - Wooden board (sawing crafting category) can now be handcrafted
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2024-10-16
  Features:
    - New recipes for military items
  Bugfixes:
    - Fixed military tech tree for Krastorio2 "more realistic guns" setting is enabled
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2024-10-15
  Notes:
    - If you have already a big factory it might not be worth upgrading since some recipes have changed
  Features:
    - New Building: Lumber mill
    - Added wooden board
    - Engineer spawns now with biolab, pipes and offshore pump for easier wood production
    - Support for krastorio custom stack sizes
    - Space research data is now crushed into rocket control unit, processing unit and electronic components
    - Update to resource spawning
    - Added asteroid mining for dark matter
  Bugfixes:
    - Unlock unlimited ingredient count for krastorio buildings
    - Locale fixes
    - personal roboports mk3 and mk4 are now in crafting category
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2024-10-10
  Features:
    - Added radioactivity to nuclear items. Only works upon creating a new game.
  Bugfixes:
    - Changed position of steel plate icon